information from texture paint is lost if the color space of the image is changed in the image texture node #64969

Closed
opened 2019-05-22 03:41:35 +02:00 by edwin hernandez · 3 comments

System Information
Operating system: Linux-4.15.0-50-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 384.130

Blender Version
Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-21 22:53, hash: 8accb5a46f

Short description of error
information from texture paint is lost if the color space of the image is changed in the image texture node

Exact steps for others to reproduce the error
from the default template, go to the "Texture Painting" workspace
add a new base color slot and do some painting
switch to the "Shading" workspace
in the image texture node, change the color space to sRGB to linear
the painting information is lost
this information can't be recovered by changing back the color space to sRGB
the same occurs if you change the color space to baked images

**System Information** Operating system: Linux-4.15.0-50-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 384.130 **Blender Version** Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-21 22:53, hash: `8accb5a46f` **Short description of error** information from texture paint is lost if the color space of the image is changed in the image texture node **Exact steps for others to reproduce the error** from the default template, go to the "Texture Painting" workspace add a new base color slot and do some painting switch to the "Shading" workspace in the image texture node, change the color space to sRGB to linear the painting information is lost this information can't be recovered by changing back the color space to sRGB the same occurs if you change the color space to baked images

Added subscriber: @EdHernandez

Added subscriber: @EdHernandez
Brecht Van Lommel self-assigned this 2019-05-22 08:52:25 +02:00

This issue was referenced by d9f4071ac6

This issue was referenced by d9f4071ac66c60ba2a4136d9ef6441377565a991

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64969
No description provided.